<resources>
    <string name="app_name">FC Varzéa 10.0</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nome</string>
    <string name="prompt_proprietario">Proprietario</string>

    <string name="prompt_titulo">Titulo</string>
    <string name="prompt_participacao">Participação</string>
    <string name="prompt_desc">Descrição</string>
    <string name="prompt_presidente">Presidente</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_site">Site</string>
    <string name="prompt_end">Rua/Nº</string>
    <string name="prompt_phone">Telefone</string>
    <string name="prompt_position">Posição que joga</string>
    <string name="prompt_city">Cidade</string>
    <string name="prompt_state">Estado</string>
    <string name="prompt_bairro">Bairro</string>
    <string name="prompt_birthDate">Data nascimento</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_new_password">Nova senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_facebook">Entrar com Facebook</string>
    <string name="action_sign_in_google">Entrar com Google</string>
    <string name="action_sign_in_twitter">Entrar com Twitter</string>
    <string name="action_sign_up">Criar Conta</string>
    <string name="action_save">Salvar</string>
    <string name="action_view_list">Lista</string>
    <string name="action_view_cards">cards</string>
    <string name="action_sign_up_call">Você é novo? Cadastre-se. ;)</string>
    <string name="action_reset_call">Não sei minha senha! :(</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="action_sign_up_short">Atualiza</string>
    <string name="action_remove_accounts">Excluir</string>
    <string name="action_sign_up_dono">Sou dono de arena</string>


    <string name="title_textview_tempo">A partida sera de:</string>
    <string name="title_search_hint">Buscar</string>
    <string name="title_rb_tempo1">1 Tempo</string>
    <string name="title_rb_tempo2">2 Tempo</string>
    <string name="title_textview_duracao">Duração da partida:</string>
    <string name="title_textview_numero_jogadores">Numero de jogadores:</string>
    <string name="title_button_buscar_jogadores">Convocar jogadores:</string>
    <string name="title_textview_criterio">Criterio de sorteio:</string>
    <string name="title_textview_melhor_pe">Melhor Pé:</string>
    <string name="title_textview_criterio_convocacao">Criterio para convocação:</string>
    <string name="title_rb_criterio1">Ordem de chegada</string>
    <string name="title_cb_ativo">Ativo</string>
    <string name="title_cb_mensal">Mensalista</string>
    <string name="title_rb_criterio2">Aleatorio</string>
    <string name="title_rb_criterio3">Sem sorteio</string>
    <string name="title_cb_proprietario_arena">Proprietario de Arena</string>
    <string name="title_cb_proprietario_arena_sim">Sim</string>
    <string name="title_cb_proprietario_arena_nao">Não</string>
    <string name="title_textview_arena">Buscar arena:</string>
    <string name="title_dialog_busca_por_arena">Buscar Por:</string>
    <string name="title_dialog_data">01/01/2016:</string>
    <string name="title_dialog_busca_arena">Criterios de busca</string>
    <string name="title_dialog_busca_por_cidade">Cidade</string>
    <string name="title_dialog_busca_por_Estado">Estado</string>
    <string name="title_dialog_busca_por_Tudo">Todos</string>
    <string name="title_dialog_busca_por_arena_filtros">Filtros:</string>
    <string name="title_dialog_busca_por_arena_filtro_data">Data:</string>
    <string name="title_dialog_busca_por_arena_filtro_dia">Dia da semana:</string>
    <string name="title_dialog_busca_por_arena_filtro_disponibilidade">Desponibilidade</string>
    <string name="title_dialog_busca_por_arena_filtro_disponibilidade_data">Click</string>
    <string name="title_dialog_busca_por_arena_filtro_disponibilidade_hora">Horario:</string>
    <string name="title_dialog_convocar_jogador">Criterios de convocação</string>
    <string name="title_dialog_convoca_jogador_filtro_posicao">Posição:</string>
    <string name="title_dialog_convoca_jogador_filtro_classificaca">Classificação:</string>
    <string name="title_dialog_convoca_jogador_filtro_idade">Idade:</string>

    <string name="home_profile">Home</string>
    <string name="home_profile_name">FC Varzéa</string>
    <string name="home_profile_data">fcvarzea@fc.com.br</string>
    <string name="position_profile_data">Selecione sua posição</string>
    <string name="update_profile">Perfil</string>
    <string name="reset">Recuperar acesso</string>
    <string name="update_login">Conta</string>
    <string name="manage_arena">Gerenciar Arena</string>
    <string name="cad_arena">Arena</string>
    <string name="update_login_button">ATUALIZAR SENHA</string>
    <string name="reset_bt_label">Iniciar recuperação acesso</string>
    <string name="update_password">Atualizar senha</string>
    <string name="update">Atualizar</string>
    <string name="remove_user">Remover conta</string>
    <string name="logout">Logout</string>
    <string name="link_accounts">Conectar contas</string>
    <string name="action_link">Link convencional login</string>
    <string name="action_unlink">Unlink convencional login</string>
    <string name="action_link_facebook">Link Facebook login</string>
    <string name="action_unlink_facebook">Unlink Facebook login</string>
    <string name="action_link_google">Link Google login</string>
    <string name="action_unlink_google">Unlink Google login</string>
    <string name="action_searchable_activity">Buscar Jogadores</string>
    <string name="search_hint">Buscar Jogadores</string>

    <!-- Strings relativas aos titulos das activity do app -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">Criar Conta</string>
    <string name="title_activity_update">Atualizar Conta</string>
    <string name="title_activity_update_login">Atualizar Login</string>
    <string name="title_activity_update_password">Atualizar Senha</string>
    <string name="title_activity_remove_user">Remover Conta</string>
    <string name="title_activity_reset">Recuperar acesso</string>
    <string name="title_activity_link_accounts">Conectar contas</string>
    <string name="title_activity_manage_accounts">Conta</string>
    <string name="title_activity_manage_arena">Arena</string>
    <string name="title_activity_new_match">Criar partida</string>
    <string name="title_activity_update_accounts">Atualizar Perfil</string>
    <string name="title_activity_my_match">Minhas partidas</string>
    <string name="title_activity_search_match">Buscar partidas</string>
    <string name="title_activity_summon_players">Selecione seus jogadores</string>
    <string name="title_activity_summon_arenas">Selecione a arena</string>
    <string name="title_activity_new_arena">Cadastro de Arena</string>


    <string name="facebook_app_id">498102913732532</string>

    <!-- Strings relativas as informações do app -->
    <string name="criar_conta_info">Ao criar uma conta, você concorda com os Termos de Uso e confirma ter lido a Política de Privacidade.</string>
    <string name="password_info">Para prosseguir com a atualização informe abaixo sua senha.</string>
    <string name="remove_info">Para remover a conta informe abaixo sua senha.</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Permissões de contatos são necessarias para fornecendo o e-mail
        conclusões ".
    </string>


    <!-- Strings relativas as mensagens do app -->
    <string name="Sucesso_update">Atualização realizada com sucesso.</string>
    <string name="remove_profile">Conta excluida com sucesso.</string>
    <string name="Criar_profile">Conta criada com sucesso.</string>
    <string name="Falha_update">Atualização não realizada.</string>
    <string name="Sucesso_reset">Recuperação de acesso iniciada. Email enviado.</string>
    <string name="Falha_reset">Recuperação de acesso Falhou! Tente novamente.</string>
    <string name="Falha_login_social">Falha ao tentar logar a rede social!</string>
    <string name="Falha_login">Falha ao tentar logar!</string>
    <string name="Falha_Google_login">"Google login falhou, tente novamente!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fundo">Fundo</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details_jogador">DetailsJogadorActivity</string>
    <string name="Name_teste">Carlos Alberto Reis Moreira</string>
    <string name="_01_01_2016">01/01/2016</string>

</resources>
